Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     flex-direction: column;
     margin: 0;
     padding: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .header {
